[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/ArchivoNarrow-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/cardengine/card/mouse_area.gd" type="Script" id=2]
[ext_resource path="res://cards/BTCard/BT_card.gd" type="Script" id=3]
[ext_resource path="res://cards/BTCard/kezza_coin.png" type="Texture" id=4]
[ext_resource path="res://cards/BTCard/card_back_background.png" type="Texture" id=5]
[ext_resource path="res://cards/BTCard/card_shadow.png" type="Texture" id=6]
[ext_resource path="res://cards/BTCard/card_placeholder.png" type="Texture" id=7]
[ext_resource path="res://cards/BTCard/card_front_background.png" type="Texture" id=8]
[ext_resource path="res://cards/BTCard/card_name_background.png" type="Texture" id=9]
[ext_resource path="res://cards/BTCard/card_desc_background.png" type="Texture" id=10]
[ext_resource path="res://cardart/card_picture_placeholder.png" type="Texture" id=11]
[ext_resource path="res://cards/BTCard/Rare.webp" type="Texture" id=12]
[ext_resource path="res://cards/BTCard/Legendary.webp" type="Texture" id=13]
[ext_resource path="res://cards/BTCard/Epic.webp" type="Texture" id=14]
[ext_resource path="res://cards/BTCard/Common.webp" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="VisualShaderNodeInput" id=5]
input_name = "uv"

[sub_resource type="VisualShaderNodeTexture" id=6]
output_port_for_preview = 0
source = 2

[sub_resource type="VisualShaderNodeInput" id=10]
input_name = "alpha"

[sub_resource type="VisualShaderNodeTexture" id=11]
source = 3

[sub_resource type="VisualShader" id=8]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Texture:4
	vec3 n_out4p0;
	float n_out4p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out4p0 = _tex_read.rgb;
		n_out4p1 = _tex_read.a;
	}

// Texture:6
	vec3 n_out6p0;
	float n_out6p1;
	{
		vec4 _tex_read = texture(NORMAL_TEXTURE, UV.xy);
		n_out6p0 = _tex_read.rgb;
		n_out6p1 = _tex_read.a;
	}

// Output:0
	COLOR.rgb = n_out4p0;
	COLOR.a = n_out6p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 50, 77 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 460, 160 )
nodes/fragment/2/node = SubResource( 5 )
nodes/fragment/2/position = Vector2( -20, 120 )
nodes/fragment/4/node = SubResource( 6 )
nodes/fragment/4/position = Vector2( 160, 100 )
nodes/fragment/5/node = SubResource( 10 )
nodes/fragment/5/position = Vector2( -20, 300 )
nodes/fragment/6/node = SubResource( 11 )
nodes/fragment/6/position = Vector2( 120, 360 )
nodes/fragment/connections = PoolIntArray( 4, 0, 0, 0, 6, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[node name="NormalCard" type="Node2D"]
script = ExtResource( 3 )
size = Vector2( 420, 600 )

[node name="AnimContainer" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="AnimContainer"]
position = Vector2( -1.34912, 0.400543 )
texture = ExtResource( 6 )

[node name="Placeholder" type="Node2D" parent="AnimContainer"]

[node name="Background" type="Sprite" parent="AnimContainer/Placeholder"]
texture = ExtResource( 7 )

[node name="Front" type="Node2D" parent="AnimContainer"]

[node name="Background" type="Sprite" parent="AnimContainer/Front"]
texture = ExtResource( 8 )

[node name="NameBackground" type="Sprite" parent="AnimContainer/Front"]
texture = ExtResource( 9 )

[node name="Name" type="Label" parent="AnimContainer/Front/NameBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -24.0
margin_right = -195.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Card Name"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescBackground" type="Sprite" parent="AnimContainer/Front"]
position = Vector2( 0, 150 )
texture = ExtResource( 10 )

[node name="Desc" type="Label" parent="AnimContainer/Front/DescBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -91.0
margin_right = -167.0
margin_bottom = -117.0
custom_colors/font_color = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_fonts/font = SubResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus, enim eu blandit sodales, risus mi egestas felis, non mattis tellus est vel turpis. Sed fermentum rutrum varius. "
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostBackground" type="Sprite" parent="AnimContainer/Front"]
position = Vector2( -184.699, -281.75 )
texture = ExtResource( 4 )

[node name="Cost" type="Label" parent="AnimContainer/Front/CostBackground"]
modulate = Color( 1, 1, 1, 0.619608 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.301
margin_top = -44.25
margin_right = -49.301
margin_bottom = -51.25
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RarityGroup" type="Node2D" parent="AnimContainer/Front"]

[node name="Common" type="Sprite" parent="AnimContainer/Front/RarityGroup"]
visible = false
position = Vector2( 0, -33 )
texture = ExtResource( 15 )

[node name="Rare" type="Sprite" parent="AnimContainer/Front/RarityGroup"]
visible = false
position = Vector2( 0, -33 )
texture = ExtResource( 12 )

[node name="Epic" type="Sprite" parent="AnimContainer/Front/RarityGroup"]
visible = false
position = Vector2( 0, -33 )
texture = ExtResource( 14 )

[node name="Legendary" type="Sprite" parent="AnimContainer/Front/RarityGroup"]
visible = false
position = Vector2( 0, -33 )
texture = ExtResource( 13 )

[node name="CardId" type="Label" parent="AnimContainer/Front"]
margin_left = 76.0
margin_top = 230.0
margin_right = 141.0
margin_bottom = 244.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = SubResource( 4 )
text = "card_id"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardArt" type="Sprite" parent="AnimContainer/Front"]
material = SubResource( 9 )
position = Vector2( -1, -149 )
texture = ExtResource( 11 )
normal_map = ExtResource( 11 )

[node name="TypeBackground" type="Sprite" parent="AnimContainer/Front"]
position = Vector2( 0, 241 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Type" type="Label" parent="AnimContainer/Front/TypeBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -24.0
margin_right = -195.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Card Type"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Node2D" parent="AnimContainer"]
visible = false

[node name="Background" type="Sprite" parent="AnimContainer/Back"]
texture = ExtResource( 5 )

[node name="MouseArea" type="TextureButton" parent="AnimContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -300.0
margin_right = 210.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransiMerge" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="EventMerge" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Transitions" type="Tween" parent="."]

[node name="AnimationPlayer" type="Tween" parent="."]

[connection signal="instance_changed" from="." to="." method="_on_NormalCard_instance_changed"]
[connection signal="button_down" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_button_down"]
[connection signal="button_up" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_button_up"]
[connection signal="drag_started" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_drag_started"]
[connection signal="mouse_entered" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_mouse_exited"]
[connection signal="prepare_for_drop" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_prepare_for_drop"]
[connection signal="pressed" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_pressed"]
[connection signal="timeout" from="TransiMerge" to="." method="_on_TransiMerge_timeout"]
[connection signal="timeout" from="EventMerge" to="." method="_on_EventMerge_timeout"]
[connection signal="tween_all_completed" from="Transitions" to="." method="_on_Transitions_tween_all_completed"]
